Define Placing Order Service Logic